# TrilatMoor

./: .buildinfo  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  algorithm.html  api.html  bathymetry.html  data-format.html  demo_G1-output.html  example.py  generate_trilateration.sh  genindex.html  index.html  installation.html  interpreting-results.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  docs_deploy.yml  pypi.yml  tests.yml
_modules/: index.html
_modules/trilatmoor/: cli.html  plotting.html  read_dship.html  solve_anchor.html  utilities.html
_sources/: bathymetry.md.txt  data-format.md.txt
docs/source/: algorithm.md  api.rst  bathymetry.md  conf.py  demo_G1-output.ipynb  index.rst  installation.md  interpreting-results.md  quickstart.md
docs/source/_static/css/: custom.css
examples/: example_with_ship_track.py  multi_survey_example.py
examples/output/: dsG1_anchorposition.txt  dsG1_example_anchorposition.txt  multi_survey_summary.txt
notebooks/: demo_G1.ipynb
scripts/: comprehensive_single_plot.py  comprehensive_trilateration_plot.py  example_with_ship_track.py  generate_dship_netcdf.sh  matlab_converter.py  parse_dship_to_netcdf.py  process_all_fc_sites.py
tests/: test_basic.py  test_dsg1_survey.py  test_plotting.py
trilaterate_moor/: __init__.py  plotting.py  read_dship.py  utilities.py
trilatmoor/: __init__.py  cli.py  plotting.py  read_dship.py  solve_anchor.py  utilities.py
